--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <input type="text" id="input" oninput="changeHandler()"></input>
     <div id="setUserInput" > Select 1 emoji </div>
 
-    <div id="list"></div>
+    <span id="list">
+
+    </span>
 
 </body>
 </html>
